--- a/OnlineTrading/StockMarket.html
+++ b/OnlineTrading/StockMarket.html
@@ -95,12 +95,12 @@
     <h1>Cover your page.</h1>
     <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
     <p class="lead">
-      <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
     </p>
   </main>
 
   <footer class="mt-auto text-white-50">
-    <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
+    <p>Students of the <a href="https://www.htl-leonding.at/" class="text-white">HTL Leonding</a>, us <a href="https://www.instagram.com/zinedin_ad/" class="text-white">@zinedin_ad</a>
+      , <a href="https://www.instagram.com/lgnjatovicluka/" class="text-white">@Ignjatovicluka</a></p>
   </footer>
 </div>
 
