--- a/OnlineTrading/NFT.html
+++ b/OnlineTrading/NFT.html
@@ -97,12 +97,12 @@
     <p class="lead">NFTs, or non-fungible tokens, are digital assets based on blockchain technology. Unlike fungible tokens, which are interchangeable and have no individual properties, NFTs are unique and cannot be replaced by other tokens. 
         This uniqueness makes them particularly interesting for use as digital collectibles, such as artwork, music, videos, or other digital content.</p>
     <p class="lead">
-      <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
     </p>
   </main>
 
   <footer class="mt-auto text-white-50">
-    <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
+    <p>Students of the <a href="https://www.htl-leonding.at/" class="text-white">HTL Leonding</a>, us <a href="https://www.instagram.com/zinedin_ad/" class="text-white">@zinedin_ad</a>
+     , <a href="https://www.instagram.com/lgnjatovicluka/" class="text-white">@Ignjatovicluka</a></p>
   </footer>
 </div>
 
