--- a/OnlineTrading/CryptoMarket.html
+++ b/OnlineTrading/CryptoMarket.html
@@ -90,10 +90,14 @@
     </div>
   </header>
 
-  <main class="px-3">
-    <h1>Cover your page.</h1>
-    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-    <p class="lead">
+<main class="px-3">
+<h1>What is Crypto Market?</h1>
+<p class="lead">A cryptocurrency market, also known as a digital currency market or a crypto market, is a marketplace where digital currencies, such as Bitcoin and Ethereum, are bought and sold.
+   These markets are decentralized and operate on blockchain technology, which is a secure and transparent digital ledger. 
+  The prices of cryptocurrencies in these markets are determined by supply and demand and can be highly volatile. 
+  Cryptocurrency markets also provide a way for individuals to invest in digital currencies and potentially earn a return on their investments.
+</p>
+<p class="lead">
     </p>
   </main>
 
