--- a/OnlineTrading/StockMarket.html
+++ b/OnlineTrading/StockMarket.html
@@ -92,8 +92,11 @@
   </header>
 
   <main class="px-3">
-    <h1>Cover your page.</h1>
-    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+    <h1>What is Stock Market?</h1>
+    <p class="lead">A stock market is a financial marketplace where stocks, bonds, and other securities are bought and sold. 
+      It provides a way for companies to raise money by issuing stocks and for investors to earn a return on their investments. 
+      The stock market is also a barometer of the overall health of an economy, as the performance of the market is closely tied to the performance of the economy as a whole.
+    </p>
     <p class="lead">
     </p>
   </main>
