--- a/OnlineTrading/CryptoMarket.html
+++ b/OnlineTrading/CryptoMarket.html
@@ -83,9 +83,10 @@
       <h3 class="float-md-start mb-0">CryptoMarket</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link fw-bold py-1 px-0" href="index.html">Home</a>
-        <a class="nav-link fw-bold py-1 px-0" href="StockMarket.html">StockMarket</a>
-        <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="CryptoMarket.html">CryptoMarket</a>
+        <a class="nav-link fw-bold py-1 px-0" href="StockMarket.html">Stock Market</a>
+        <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="CryptoMarket.html">Crypto Market</a>
         <a class="nav-link fw-bold py-1 px-0" href="NFT.html">NFT</a>
+        <a class="nav-link fw-bold py-1 px-0" href="AboutUs.html">AboutUs</a>
       </nav>
     </div>
   </header>
