--- a/OnlineTrading/index.html
+++ b/OnlineTrading/index.html
@@ -56,8 +56,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
+        <img src="StockMarket.jpg" />
         <div class="container">
           <div class="carousel-caption text-start">
             <h1>Stock Market</h1>
@@ -67,19 +66,18 @@
         </div>
       </div>
       <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
+        <img src="pexels-jonathan-borba-14354106.png" />
         <div class="container">
           <div class="carousel-caption">
             <h1>Crypto Market</h1>
             <p>What is cryptocurrency anyway and how is it negotiated on the online market?</p>
             <p><a class="btn btn-lg btn-primary" href="CryptoMarket.html">Learn More</a></p>
+       
           </div>
         </div>
       </div>
       <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
+        <img src="NFT.jpg" />
         <div class="container">
           <div class="carousel-caption text-end">
             <h1>NFT</h1>
@@ -185,7 +183,6 @@
   </footer>
 </main>
   <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-
       
   </body>
 </html>
