added a stock market

--- a/OnlineTrading/CryptoMarket.html
+++ b/OnlineTrading/CryptoMarket.html
@@ -125,7 +125,8 @@
       <br>
       <br>
       <h1>What is Crypto Market?</h1>
-      <p class="lead">A cryptocurrency market, also known as a digital currency market or a crypto market, is a marketplace where digital currencies, such as Bitcoin and Ethereum, are bought and sold. These markets are decentralized and operate on blockchain technology, which is a secure and transparent digital ledger. The prices of cryptocurrencies in these markets are determined by supply and demand and can be highly volatile. Cryptocurrency markets also provide a way for individuals to invest in digital currencies and potentially earn a return on their investments.</p>
+      <p class="lead">A cryptocurrency market, also known as a digital currency market or a crypto market, is a marketplace where digital currencies, 
+        such as Bitcoin and Ethereum, are bought and sold. These markets are decentralized and operate on blockchain technology, which is a secure and transparent digital ledger. The prices of cryptocurrencies in these markets are determined by supply and demand and can be highly volatile. Cryptocurrency markets also provide a way for individuals to invest in digital currencies and potentially earn a return on their investments.</p>
       <p class="lead"></p>
 
       <div class="container">
