--- a/OnlineTrading/StockMarket.html
+++ b/OnlineTrading/StockMarket.html
@@ -72,7 +72,6 @@
     .tradingview-widget-copyright {
       display: none !important;
     }
-
     .container {
       display: flex;
       justify-content: center;
@@ -125,12 +124,87 @@
       <br>
       <br>
       <h1>What is Stock Market?</h1>
-      <p class="lead">A stock market is a financial marketplace where stocks, bonds, and other securities are bought and sold. 
-        It provides a way for companies to raise money by issuing stocks and for investors to earn a return on their investments. 
-        The stock market is also a barometer of the overall health of an economy, as the performance of the market is closely tied to the performance of the economy as a whole.
+      <p class="lead">The stock market is a dynamic marketplace where investors buy and sell shares of publicly traded companies. 
+        It provides a platform for companies to raise capital and for individuals to invest and grow their wealth. The stock market is influenced by various factors such as economic conditions, company performance, and investor sentiment. It offers opportunities for long-term investing as well as short-term trading strategies. Investors can diversify their portfolios by investing in different sectors and regions. 
+        Understanding market trends, conducting research, and managing risks are crucial for success in the stock market.
       </p>
       <p class="lead">
       </p>
+      <div class="container">
+       <!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div class="tradingview-widget-container__widget"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-symbol-overview.js" async>
+  {
+  "symbols": [
+    [
+      "Apple",
+      "AAPL|1D|USD"
+    ],
+    [
+      "Google",
+      "GOOGL|1D|USD"
+    ],
+    [
+      "Microsoft",
+      "MSFT|1D|USD"
+    ],
+    [
+      "NASDAQ:NFLX|1D|USD"
+    ],
+    [
+      "NASDAQ:AMZN|1D|USD"
+    ],
+    [
+      "NASDAQ:TSLA|1D|USD"
+    ],
+    [
+      "NASDAQ:NVDA|1D|USD"
+    ],
+    [
+      "NYSE:NKE|1D|USD"
+    ],
+    [
+      "XETR:ADS|1D|USD"
+    ]
+  ],
+  "chartOnly": false,
+  "width": "1000",
+  "height": "500",
+  "locale": "en",
+  "colorTheme": "dark",
+  "autosize": false,
+  "showVolume": false,
+  "showMA": false,
+  "hideDateRanges": false,
+  "hideMarketStatus": false,
+  "hideSymbolLogo": false,
+  "scalePosition": "right",
+  "scaleMode": "Normal",
+  "fontFamily": "-apple-system, BlinkMacSystemFont, Trebuchet MS, Roboto, Ubuntu, sans-serif",
+  "fontSize": "10",
+  "noTimeScale": false,
+  "valuesTracking": "1",
+  "changeMode": "price-and-percent",
+  "chartType": "line",
+  "lineWidth": 3,
+  "lineType": 0,
+  "dateRanges": [
+    "1d|1",
+    "1m|30",
+    "3m|60",
+    "12m|1D",
+    "60m|1W",
+    "all|1M"
+  ],
+  "upColor": "#22ab94",
+  "downColor": "#f7525f"
+}
+  </script>
+</div>
+<!-- TradingView Widget END -->
+      </div>
     </main>
 
     <footer class="mt-auto text-white-50">
@@ -140,5 +214,4 @@
     </footer>
   </div>
 </body>
-
 </html>
