--- a/OnlineTrading/index.html
+++ b/OnlineTrading/index.html
@@ -61,7 +61,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="StockMarket.jpg" />
+        <img src="StockMarket.jpg" alt="Transparent Image"  />
         <div class="container">
           <div class="carousel-caption text-start">
             <h1>Stock Market</h1>
