--- a/OnlineTrading/NFT.html
+++ b/OnlineTrading/NFT.html
@@ -9,6 +9,7 @@
 <html lang="en" class="h-100">
 
 <head>
+  <script src="script.js"></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
