--- a/OnlineTrading/Strategies.html
+++ b/OnlineTrading/Strategies.html
@@ -125,7 +125,9 @@
       <br>
       <h1>Strategies</h1>
       <p class="lead">
-        Using these strategies for online trading offers key benefits such as enhanced knowledge, consistency, risk management, practice, capital preservation, informed decision making, and emotional control. They provide a solid foundation for navigating the complexities of online trading, empowering you to make informed decisions and increase your chances of success. By implementing these proven strategies, you can effectively manage risk, protect your capital, and optimize your trading performance in the fast-paced and ever-changing world of online trading. Whether you are a beginner or an experienced trader, incorporating these strategies into your trading approach can help you achieve your financial goals and build a sustainable and profitable online trading portfolio.          </p>
+        Using these strategies for online trading offers key benefits such as enhanced knowledge, consistency, risk management, practice, capital preservation, informed decision making, and emotional control. They provide a solid foundation for navigating the complexities of online trading, empowering 
+        you to make informed decisions and increase your chances of success. 
+        By implementing these proven strategies, you can effectively manage risk, protect your capital, and optimize your trading performance in the fast-paced and ever-changing world of online trading. Whether you are a beginner or an experienced trader, incorporating these strategies into your trading approach can help you achieve your financial goals and build a sustainable and profitable online trading portfolio.          </p>
       
     </main>
 
