--- a/OnlineTrading/index.html
+++ b/OnlineTrading/index.html
@@ -121,7 +121,7 @@
         </div>
 
         <h2 class="fw-normal">Security</h2>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+        <p>Prioritizing security in online trading builds trust, safeguards user assets, and mitigates risks for a secure trading environment.  </p>
         <p><a class="btn btn-secondary" href="Security.html">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
@@ -130,7 +130,7 @@
         </div>
 
         <h2 class="fw-normal">Strategies</h2>
-        <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
+        <p>Implementing effective trading strategies is crucial for maximizing opportunities, managing risks, and achieving success in online trading.</p>
         <p><a class="btn btn-secondary" href="Strategies.html">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
@@ -139,7 +139,7 @@
         </div>
 
         <h2 class="fw-normal">WallStreet</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
+        <p>Wall Street: The iconic global financial hub shaping markets and driving economic trends.</p>
         <p><a class="btn btn-secondary" href="WallStreet.html">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
