commit some strategies

--- a/OnlineTrading/Strategies.html
+++ b/OnlineTrading/Strategies.html
@@ -128,7 +128,48 @@
         Using these strategies for online trading offers key benefits such as enhanced knowledge, consistency, risk management, practice, capital preservation, informed decision making, and emotional control. They provide a solid foundation for navigating the complexities of online trading, empowering 
         you to make informed decisions and increase your chances of success. 
         By implementing these proven strategies, you can effectively manage risk, protect your capital, and optimize your trading performance in the fast-paced and ever-changing world of online trading. Whether you are a beginner or an experienced trader, incorporating these strategies into your trading approach can help you achieve your financial goals and build a sustainable and profitable online trading portfolio.          </p>
-    </main>
+        <br>
+        <br>
+        <p class="lead">1. Trend Trading: This strategy involves identifying and following the prevailing market trends to capitalize on price movements in the same direction.</p>
+        <br>
+        <p class="lead">2. Breakout Trading: Traders using this strategy aim to profit from price breakouts above or below key levels of support or resistance.</p>
+        <br>
+        <p class="lead">3. Range Trading: In range trading, traders identify and trade within a price range where the market tends to oscillate between defined upper and lower boundaries.</p>
+        <br>
+        <p class="lead">4. Scalping: Scalping is a high-frequency trading strategy that involves making quick trades to capture small price movements for small but frequent profits.</p>
+        <br>
+        <p class="lead">5. Momentum Trading: This strategy focuses on trading assets with strong price momentum, aiming to capitalize on the continuation of a trend.</p>
+        <br>
+        <p class="lead">6. Contrarian Trading: Contrarian traders go against prevailing market sentiment, buying when others are selling and selling when others are buying, with the expectation of a reversal.</p>
+        <br>
+        <p class="lead">7. News Trading: This strategy involves trading based on the release of significant news or economic data that can have an immediate impact on asset prices.</p>
+        <br>
+        <p class="lead">8. Swing Trading: Swing traders aim to capture short- to medium-term price swings within an established trend, holding positions for a few days to weeks.</p>
+        <br>
+        <p class="lead">9. Mean Reversion: This strategy assumes that prices tend to revert to their average or mean over time, allowing traders to profit from price deviations.</p>
+        <br>
+        <p class="lead">10. Technical Analysis: Traders using technical analysis analyze historical price and volume data to identify patterns and trends that can guide their trading decisions.</p>
+        <br>
+        <p class="lead">11.Fundamental Analysis: Fundamental analysis involves evaluating the financial health and performance of companies and industries to make trading decisions based on their intrinsic value.</p>
+        <br>
+        <p class="lead">12. Pair Trading: Pair trading involves simultaneously buying and selling two correlated assets to profit from relative price movements between them.</p>
+        <br>
+        <p class="lead">13. Arbitrage: Arbitrage traders exploit price discrepancies between different markets or exchanges to make risk-free profits.</p>
+        <br>
+        <p class="lead">14. Event-Driven Trading: This strategy focuses on trading opportunities arising from specific events such as earnings announcements, mergers, or regulatory changes.</p>
+        <br>
+        <p class="lead">15. Options Trading: Options trading involves buying or selling options contracts to speculate on price movements or hedge existing positions.</p>
+        <br>
+        <p class="lead">16. Algorithmic Trading: Algorithmic traders use computer programs and algorithms to automatically execute trades based on predefined rules and strategies.</p>
+        <br>
+        <p class="lead">17. Position Trading: Position traders take long-term positions based on broader market trends, holding trades for weeks, months, or even years.</p>
+        <br>
+        <p class="lead">18. Sector Rotation: Sector rotation involves shifting investments between different sectors based on their relative strength or weakness in the market.</p>
+        <br>
+        <p class="lead">19. Volatility Trading: Traders who specialize in volatility trading seek to profit from price fluctuations and changes in market volatility.</p>
+        <br>
+        <p class="lead">20. Risk Management: Although not a specific trading strategy, effective risk management is crucial for online traders to protect capital and minimize losses by using techniques such as stop-loss orders and position sizing.</p>
+      </main>
 
     <footer class="mt-auto text-white-50">
       <p>Students of the <a href="https://www.htl-leonding.at/" class="text-white">HTL Leonding</a>, us <a
